--- a/style.css
+++ b/style.css
@@ -66,10 +66,16 @@ button{
 }
 
 .output{
-    height: 300px;
-    width: 400px;
+    height: 500px;
+    width: 500px;
     background-color: darkslategray;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.tipamount{
+    font-size: 20px;
+    font-style: normal;
 }
