--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button{
     height: 500px;
     width: 500px;
     background-color: darkslategray;
+    border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
