--- a/style.css
+++ b/style.css
@@ -45,11 +45,23 @@ body{
 
 button{
     background-color: darkgreen;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 15px;
 }
 
+
 .custom-button{
-    background-color: darkgrey;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
 }
+
 
 .first-row{
     display: flex;
