--- a/style.css
+++ b/style.css
@@ -90,9 +90,16 @@ body{
     border-radius: 15px;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     color: ivory;
 }
+
+.outfield{
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+}
+
 
 
