--- a/style.css
+++ b/style.css
@@ -37,6 +37,21 @@ body{
     flex-wrap: wrap;
 }
 
+#bill-input{
+    outline: none;
+    border: none;
+    border-radius: 5%;
+    background: var(--lighter-greyish-cyan);
+    display: block;
+    width: 50%;
+    height: 48px;
+    text-align: left;
+    padding-right: 1rem;
+    font-weight: 700;
+    font-size: 24px;
+}
+
+
 
 .select-tip{
     padding-top: 100px;
@@ -120,6 +135,5 @@ body{
     width: 500px;
     height: 50px;
 }
-
 
 
