--- a/style.css
+++ b/style.css
@@ -21,8 +21,83 @@ body{
     text-transform: uppercase;
 }
 
+button{
+    width: 147px;
+    height: 48px;
+    background: var(--very-dark-cyan);
+    border-radius: 5px;
+    font-size: 24px;
+    text-align: center;
+    color: var(--white);
+    border: none;
+    margin-bottom: 1rem;
+}
+
 .button-text{
+    background-color: darkgreen;
     color: whitesmoke;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    border-radius: 15px;
+}
+
+.custom-button-text{
+    background-color: grey;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 15px;
+}
+
+#custom {
+    width: 146px;
+    height: 48px;
+    border: none;
+    background: var(--lighter-greyish-cyan);
+    border-radius: 5px;
+    text-align: center;
+    font-size: 24px;
+    color: var(--very-dark-cyan);
+    outline: none;
+}
+
+#custom:hover, #bill-input:hover, #num-people:hover {
+    cursor: pointer;
+    border: 2px solid var(--strong-cyan);
+}
+
+.button-text:hover {
+    cursor: pointer;
+    background: goldenrod
+}
+
+.tip-amount-container {
+    padding: 2.3rem 1.3rem 1.2rem 1.3rem;
+}
+
+.tip-amount {
+    color: var(--white);
+    grid-area: 1/1/2/2;
+}
+
+#tip-value, #total-value {
+    font-weight: 700;
+    font-size: 32px;
+    color: var(--strong-cyan);
+    grid-area: 1/2/3/3;
+    justify-self: end;
+}
+
+.small-display {
+    font-size: 13px;
+    color: var(--dark-grayish-cyan);
+    grid-area: 2/1/3/2;
 }
 
 .calculator{
@@ -51,39 +126,14 @@ body{
     font-size: 24px;
 }
 
-
-
-/* .select-tip{
-    padding-top: 20px;
-} */
+#bill-input:focus, #num-people:focus {
+    border: 2px solid var(--strong-cyan);
+}
 
 .tip-type{
     width: 50%;
     height: 30%;
 }
-
-.button-text{
-    background-color: darkgreen;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    border-radius: 15px;
-}
-
-
-.custom-button-text{
-    background-color: grey;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 15px;
-}
-
 
 .first-row{
     display: flex;
@@ -94,10 +144,6 @@ body{
     display: flex;
     flex-wrap: wrap;
 }
-
-/* .num-of-people{
-    padding-top: 10%;
-} */
 
 .output{
     padding-top: 10px;
@@ -111,6 +157,7 @@ body{
     flex-direction: column;
     color: ivory;
 }
+
 
 .outfield{
     padding-top: 50px;
@@ -129,11 +176,15 @@ body{
     background-color: rgb(32, 199, 32);
     text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
     display: inline-block;
     font-size: 20px;
     border-radius: 15px;
-    width: 500px;
     height: 50px;
+    font-weight: 700;
+    width: 281px;
+    margin: 0 22px;
 }
+
 
 
